report is writing

--- a/Little covariance games.tex
+++ b/Little covariance games.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 \chapter{Variance of the random walk}
-
+\subsection{copied}
 Studying variance of estimator is important for the construction of confidence interval and testing of hypothesis.
 
 
