--- a/rds.bib
+++ b/rds.bib
@@ -62,3 +62,34 @@
   organization={ACM}
 }
 
+@article{pollard2013adolescent,
+  title={Adolescent Friendship Networks and Trajectories of Binge Drinking},
+  author={Pollard, Michael and Green, Harold D and Kennedy, David P and Go, Myong-Hyun and Tucker, Joan S},
+  year={2013},
+  publisher={RAND Working Paper Series WR-998}
+}
+
+@book{bremaud2013markov,
+  title={Markov chains: Gibbs fields, Monte Carlo simulation, and queues},
+  author={Br{\'e}maud, Pierre},
+  volume={31},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@inproceedings{kauffmann2007measurement,
+  title={Measurement-based self organization of interfering 802.11 wireless access networks},
+  author={Kauffmann, Bruno and Baccelli, Fran{\c{c}}ois and Chaintreau, Augustin and Mhatre, Vivek and Papagiannaki, Konstantina and Diot, Christophe},
+  booktitle={INFOCOM 2007. 26th IEEE International Conference on Computer Communications. IEEE},
+  pages={1451--1459},
+  year={2007},
+  organization={IEEE}
+}
+
+@misc{Senate,
+  title = {Computer Science University of Maryland},
+  howpublished = {\url{http://www.cs.umd.edu/hcil/science20}},
+  note = {Accessed: 2015-08-07}
+}
+
+
