--- a/rds.tex
+++ b/rds.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 \chapter{Respondent-driven sampling}
-
+\subsection{copied}
 Respondent-driven sampling is a technique for estimating traits in hidden population. It is widely used for studying prevalence of HIV/AIDS among injection drug users, sex workers, men who have sex with men.  
 
 Studying prevalence of disease can help to understand and control its spreading. Unfortunately, there are difficulties with such kind of research as there is no sampling frame and members of hidden groups may not want reveal themselves. 
